# Emotion_App

./: .gitattributes  .gitignore  0.18.0  Dockerfile  README.md  ResNET_atak_adwersalny.ipynb  create_data.py  docker-compose.prod.yml  docker-compose.yaml  docker-compose.yml  package-lock.json  pyproject.toml  pyrightconfig.json  readme_md.md  requirements.txt  run.py  setup_models.py
aplikacja/: README.md  app.py  app_pl.py
aplikacja/helpers/: resnet_model_definition.py
aplikacja/model/: label_encoder.pkl  mean.npy  std.npy
aplikacja/static/css/: style.css
aplikacja/static/js/: script.js
aplikacja/templates/: index.html
app/: main.py
app/api/: __init__.py  endpoints.py  schemas.py
app/core/: __init__.py  config.py  model_manager.py  settings.py
app/frontend/: Dockerfile  package-lock.json  package.json
app/frontend/public/: index.html  manifest.json
app/frontend/src/: App.js  index.css  index.js
app/frontend/src/components/: AudioRecorder.js  EmotionResult.js  FileUploader.css  FileUploader.js  Navigation.js
app/frontend/src/pages/: AboutPage.js  HomePage.js  RecordPage.js  UploadPage.js
app/frontend/src/services/: api.js
app/models/: __init__.py  audio_resnet.py  ensemble_model.py  feature_extraction.py  resnet_model.py
app/models/helpers/: ensemble_model.py
app/models/saved_models/: ensemble_model_metadata.json  melspectrogram_stats.json  normalization_stats.json
model_outputs/: best_model.pt
