[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "emotion-audio-app"
version = "0.1.0"
description = "Audio emotion detection application using FastAPI and PyTorch"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Audio Emotion Team" }
]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "torch>=2.3.0",
    "torchaudio>=2.3.0",
    "librosa>=0.10.1",
    "numpy>=1.24.0",
    "pydantic>=2.6.0",
    "python-multipart>=0.0.7",
    "pillow>=10.2.0",
    "torchvision>=0.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.1.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest]
testpaths = ["tests"] 