[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "emotion-audio-app"
version = "0.1.0"
description = "Audio emotion detection application using FastAPI and PyTorch"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Audio Emotion Team" }
]

dependencies = [
    "fastapi>=0.115.12",
    "uvicorn>=0.27.0",
    "torch>=2.7.0",
    "torchaudio>=2.7.0",
    "numpy>=2.2.5",
    "pydantic>=2.11",
    "python-multipart>=0.0.17",
    "pillow>=11.2.1",
    "torchvision>=0.18.0",
    "pydantic-settings>=2.9.1",
    "soundfile==0.13.1",
    "librosa==0.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.1.0",
    "ruff>=0.2.0",
    "mypy>=1.15",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest]
testpaths = ["tests"]
